test/tests/stages/13_floating-point_numbers/invalid_types/complement_double.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: d
                  CSingleInit: 
                    CUnary: 
                      CComplement: 
                      CConstant: 
                        CConstDouble: 
                          TDouble: 10.000000
                        None: 
                      None: 
                    None: 
                  Double: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
